Huge changes to the Commissioning/DRX/HDF5 scripts to implement the new metadata-aware HDF5 file format (Ticket #30).  The changes include: 1) consolidation of hdfWaterfall.py and hdfWaterfallStokes.py into a single script, 2) consolidation of plotHDF.py and plotHDFStokes.py into a single script, 3) hdfWaterfall.py and drspec2hdf.py accept a metadata tarball as an input, and 3) support for counting saturation events in hdfWaterfall.py and displaying the results in plotHDF.py.  Several new scripts have been added as well to help split apart multi-observation HDF5 files and calculate spectral kurtosis values.

--- a/DRX/HDF5/README
+++ b/DRX/HDF5/README
@@ -4,495 +4,35 @@ DRX Processing Scripts with HDF5 Output
 hdfWaterfall.py
 ---------------
 Version of drxWaterfall.py that writes to HDF5 rather than NPZ to provide
-an easier path to getting the data into other packages, e.g., Matlab.  The
-output HDF5 files are the format (via h5dump):
-
-HDF5 {
-GROUP "/" {
-   ATTRIBUTE "Beam" {
-      DATATYPE  H5T_STD_I64LE
-      DATASPACE  SCALAR
-   }
-   ATTRIBUTE "RBW" {
-      DATATYPE  H5T_IEEE_F64LE
-      DATASPACE  SCALAR
-   }
-   ATTRIBUTE "RBW_Units" {
-      DATATYPE  H5T_STRING {
-            STRSIZE 2;
-            STRPAD H5T_STR_NULLPAD;
-            CSET H5T_CSET_ASCII;
-            CTYPE H5T_C_S1;
-         }
-      DATASPACE  SCALAR
-   }
-   ATTRIBUTE "sampleRate" {
-      DATATYPE  H5T_IEEE_F64LE
-      DATASPACE  SCALAR
-   }
-   ATTRIBUTE "sampleRate_Units" {
-      DATATYPE  H5T_STRING {
-            STRSIZE 9;
-            STRPAD H5T_STR_NULLPAD;
-            CSET H5T_CSET_ASCII;
-            CTYPE H5T_C_S1;
-         }
-      DATASPACE  SCALAR
-   }
-   ATTRIBUTE "tInt" {
-      DATATYPE  H5T_IEEE_F64LE
-      DATASPACE  SCALAR
-   }
-   ATTRIBUTE "tInt_Units" {
-      DATATYPE  H5T_STRING {
-            STRSIZE 1;
-            STRPAD H5T_STR_NULLPAD;
-            CSET H5T_CSET_ASCII;
-            CTYPE H5T_C_S1;
-         }
-      DATASPACE  SCALAR
-   }
-   GROUP "Tuning1" {
-      GROUP "Mask" {
-         DATASET "XX" {
-            DATATYPE  H5T_ENUM {
-                  H5T_STD_I8LE;
-                  "FALSE"            0;
-                  "TRUE"             1;
-               }
-            DATASPACE  SIMPLE { ( 3601, 16383 ) / ( 3601, 16383 ) }
-         }
-         DATASET "YY" {
-            DATATYPE  H5T_ENUM {
-                  H5T_STD_I8LE;
-                  "FALSE"            0;
-                  "TRUE"             1;
-               }
-            DATASPACE  SIMPLE { ( 3601, 16383 ) / ( 3601, 16383 ) }
-         }
-      }
-      DATASET "XX" {
-         DATATYPE  H5T_IEEE_F32LE
-         DATASPACE  SIMPLE { ( 3601, 16383 ) / ( 3601, 16383 ) }
-         ATTRIBUTE "axis0" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 4;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-         ATTRIBUTE "axis1" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 9;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-      DATASET "YY" {
-         DATATYPE  H5T_IEEE_F32LE
-         DATASPACE  SIMPLE { ( 3601, 16383 ) / ( 3601, 16383 ) }
-         ATTRIBUTE "axis0" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 4;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-         ATTRIBUTE "axis1" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 9;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-      DATASET "freq" {
-         DATATYPE  H5T_IEEE_F64LE
-         DATASPACE  SIMPLE { ( 16383 ) / ( 16383 ) }
-         ATTRIBUTE "Units" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 2;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-   }
-   GROUP "Tuning2" {
-      GROUP "Mask" {
-         DATASET "XX" {
-            DATATYPE  H5T_ENUM {
-                  H5T_STD_I8LE;
-                  "FALSE"            0;
-                  "TRUE"             1;
-               }
-            DATASPACE  SIMPLE { ( 3601, 16383 ) / ( 3601, 16383 ) }
-         }
-         DATASET "YY" {
-            DATATYPE  H5T_ENUM {
-                  H5T_STD_I8LE;
-                  "FALSE"            0;
-                  "TRUE"             1;
-               }
-            DATASPACE  SIMPLE { ( 3601, 16383 ) / ( 3601, 16383 ) }
-         }
-      }
-      DATASET "XX" {
-         DATATYPE  H5T_IEEE_F32LE
-         DATASPACE  SIMPLE { ( 3601, 16383 ) / ( 3601, 16383 ) }
-         ATTRIBUTE "axis0" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 4;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-         ATTRIBUTE "axis1" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 9;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-      DATASET "YY" {
-         DATATYPE  H5T_IEEE_F32LE
-         DATASPACE  SIMPLE { ( 3601, 16383 ) / ( 3601, 16383 ) }
-         ATTRIBUTE "axis0" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 4;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-         ATTRIBUTE "axis1" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 9;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-      DATASET "freq" {
-         DATATYPE  H5T_IEEE_F64LE
-         DATASPACE  SIMPLE { ( 16383 ) / ( 16383 ) }
-         ATTRIBUTE "Units" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 2;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-   }
-   DATASET "time" {
-      DATATYPE  H5T_IEEE_F64LE
-      DATASPACE  SIMPLE { ( 3601 ) / ( 3601 ) }
-   }
-}
-}
-
-plotHDF.py
-----------
-Version of plotWaterfall.py for viewing HDF5 files.
-
-waterfall2hdf.py
-----------------
-Simple script to convert existing NPZ files generated by drxWaterfall.py/
-drxWaterfallDRSU.py into HDF5 files that are compatible with the above HDF5 
-organization.
+an easier path to getting the data into other packages, e.g., Matlab.  This
+script supports both linear polarization products and Stokes parameter.
 
 drspec2hdf.py
 -------------
 Simple script to convert a binary DR spectrometer file into an HDF5 file that
 is compatible with the above HDF5 organization.
 
+splitObservations.py
+--------------------
+Read in a DRX/HDF5 watefall file and split out various observations.  The 
+observations can be split by:
+  * Target Source
+  * Observation ID number
+or the script can be used to just list the observations within an HDF5 file.
 
-drxWaterfallStokes.py
----------------------
-Similar to drxWaterfall.py, but computes all four Stokes parameters.  The HDF5 
-file structure, via h5dump, is:
+calculateSK.py
+--------------
+calculateSK.py - Read in a DRX/HDF5 wataerfall file and calculate the pseudo-
+spectral kurtosis (pSK) for each observation (XX and YY or I).  The pSK values
+are "pseudo" since the spectra contained within the HDF5 file are averaged 
+over N FFTs where N > 1.  The pSK value for each channel is calculated by 
+examining M consecutive spectra.
 
-HDF5 {
-GROUP "/" {
-   ATTRIBUTE "Beam" {
-      DATATYPE  H5T_STD_I64LE
-      DATASPACE  SCALAR
-   }
-   ATTRIBUTE "RBW" {
-      DATATYPE  H5T_IEEE_F64LE
-      DATASPACE  SCALAR
-   }
-   ATTRIBUTE "RBW_Units" {
-      DATATYPE  H5T_STRING {
-            STRSIZE 2;
-            STRPAD H5T_STR_NULLPAD;
-            CSET H5T_CSET_ASCII;
-            CTYPE H5T_C_S1;
-         }
-      DATASPACE  SCALAR
-   }
-   ATTRIBUTE "sampleRate" {
-      DATATYPE  H5T_IEEE_F64LE
-      DATASPACE  SCALAR
-   }
-   ATTRIBUTE "sampleRate_Units" {
-      DATATYPE  H5T_STRING {
-            STRSIZE 9;
-            STRPAD H5T_STR_NULLPAD;
-            CSET H5T_CSET_ASCII;
-            CTYPE H5T_C_S1;
-         }
-      DATASPACE  SCALAR
-   }
-   ATTRIBUTE "tInt" {
-      DATATYPE  H5T_IEEE_F64LE
-      DATASPACE  SCALAR
-   }
-   ATTRIBUTE "tInt_Units" {
-      DATATYPE  H5T_STRING {
-            STRSIZE 1;
-            STRPAD H5T_STR_NULLPAD;
-            CSET H5T_CSET_ASCII;
-            CTYPE H5T_C_S1;
-         }
-      DATASPACE  SCALAR
-   }
-   GROUP "Tuning1" {
-      DATASET "I" {
-         DATATYPE  H5T_IEEE_F32LE
-         DATASPACE  SIMPLE { ( 3600, 4095 ) / ( 3600, 4095 ) }
-         ATTRIBUTE "axis0" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 4;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-         ATTRIBUTE "axis1" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 9;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-      DATASET "Q" {
-         DATATYPE  H5T_IEEE_F32LE
-         DATASPACE  SIMPLE { ( 3600, 4095 ) / ( 3600, 4095 ) }
-         ATTRIBUTE "axis0" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 4;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-         ATTRIBUTE "axis1" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 9;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-      DATASET "U" {
-         DATATYPE  H5T_IEEE_F32LE
-         DATASPACE  SIMPLE { ( 3600, 4095 ) / ( 3600, 4095 ) }
-         ATTRIBUTE "axis0" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 4;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-         ATTRIBUTE "axis1" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 9;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-      DATASET "V" {
-         DATATYPE  H5T_IEEE_F32LE
-         DATASPACE  SIMPLE { ( 3600, 4095 ) / ( 3600, 4095 ) }
-         ATTRIBUTE "axis0" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 4;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-         ATTRIBUTE "axis1" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 9;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-      DATASET "freq" {
-         DATATYPE  H5T_IEEE_F64LE
-         DATASPACE  SIMPLE { ( 4095 ) / ( 4095 ) }
-         ATTRIBUTE "Units" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 2;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-   }
-   GROUP "Tuning2" {
-      DATASET "I" {
-         DATATYPE  H5T_IEEE_F32LE
-         DATASPACE  SIMPLE { ( 3600, 4095 ) / ( 3600, 4095 ) }
-         ATTRIBUTE "axis0" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 4;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-         ATTRIBUTE "axis1" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 9;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-      DATASET "Q" {
-         DATATYPE  H5T_IEEE_F32LE
-         DATASPACE  SIMPLE { ( 3600, 4095 ) / ( 3600, 4095 ) }
-         ATTRIBUTE "axis0" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 4;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-         ATTRIBUTE "axis1" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 9;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-      DATASET "U" {
-         DATATYPE  H5T_IEEE_F32LE
-         DATASPACE  SIMPLE { ( 3600, 4095 ) / ( 3600, 4095 ) }
-         ATTRIBUTE "axis0" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 4;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-         ATTRIBUTE "axis1" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 9;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-      DATASET "V" {
-         DATATYPE  H5T_IEEE_F32LE
-         DATASPACE  SIMPLE { ( 3600, 4095 ) / ( 3600, 4095 ) }
-         ATTRIBUTE "axis0" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 4;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-         ATTRIBUTE "axis1" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 9;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-      DATASET "freq" {
-         DATATYPE  H5T_IEEE_F64LE
-         DATASPACE  SIMPLE { ( 4095 ) / ( 4095 ) }
-         ATTRIBUTE "Units" {
-            DATATYPE  H5T_STRING {
-                  STRSIZE 2;
-                  STRPAD H5T_STR_NULLPAD;
-                  CSET H5T_CSET_ASCII;
-                  CTYPE H5T_C_S1;
-               }
-            DATASPACE  SCALAR
-         }
-      }
-   }
-   DATASET "time" {
-      DATATYPE  H5T_IEEE_F64LE
-      DATASPACE  SIMPLE { ( 3600 ) / ( 3600 ) }
-   }
-}
-}
+Note:  Although the pSK method works reasonable well for short integration times
+(<~0.3 s) the method may break down for much longer integration times.
 
-plotHDFStokes.py
-----------------
-This script is to plotHDF.py as drxWaterfallStokes.py is to drxWaterfall.py.
+plotHDF.py
+----------
+Version of plotWaterfall.py for viewing HDF5 files created by hdfWaterfall.py and
+drspec2hdf.py.  This viewer supports all linear and Stokes data products.
 
