Updated the TBW prototype scripts to be ready for the next version of LSL that calls the north arm site lwana.

--- a/TBW/Prototype/README
+++ b/TBW/Prototype/README
@@ -3,7 +3,7 @@ Prototype DP System - TBW Scipts
 This directory provides a variety of scripts to work with the 20 output DP
 Prototype system.  This system was orignally installed at LWA1 before the 
 delivery of the full DP and not resides at the North Arm site.  All scripts
-mentioned here uses the lwa2-ssmif.txt file for mappings.
+mentioned here uses the lwana-ssmif.txt file for mappings.
 
 tbwSpectra.py
 -------------
