--- a/DRX/HDF5/README
+++ b/DRX/HDF5/README
@@ -31,6 +31,11 @@ spectra.
 Note:  Although the pSK method works reasonable well for short integration times
 (<~0.3 s) the method may break down for much longer integration times.
 
+dedisperseHDF.py
+----------------
+Given an HDF5 file, apply incoherent dedispersion to the data at the specified 
+dispersion measure and save the results to a new file.
+
 decimateHDF.py
 --------------
 Given an HDF5 file, decimate the data contained in it in both time and frequency, 
