--- a/TBW/Calibration/README
+++ b/TBW/Calibration/README
@@ -27,7 +27,8 @@ convertDelayToStretch.py, apply the new stretch factors and create a new SSMIF.
 estimateSEFD.py
 ---------------
 Given an SSMIF and a collection of TBW files, use the SoftwareDP to form beams at 
-the transit point of a source and estimate the SEFD and pointing error.
+the transit point of a source and estimate the system equivalent flux density (SEFD) 
+and pointing error.
 
 fitEstimatedSEFD.py
 -------------------
